--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,3 +3,5 @@
 @import './layout/layout.scss';
 @import './layout/section/header.scss';
 @import './layout/section/home.scss';
+@import './layout/section/works.scss';
+@import './layout/section/about.scss';
