--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,15 @@ li {
   list-style: none; }
 
 a {
-  text-decoration: none;
-  cursor: pointer; }
+  text-decoration: none; }
 
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
+
+ul, li {
+  margin: 0;
+  padding: 0; }
 
 .wrapper {
   overflow: hidden;
@@ -25,19 +28,15 @@ a {
   min-height: 100%;
   background-color: #0c0c0c; }
 
-.container {
-  position: relative;
-  width: 1170px;
-  margin: 0 auto; }
-
 .section {
   position: relative;
   width: 100%;
   height: 100%;
-  min-height: 650px; }
+  min-height: 650px;
+  border-bottom: 1px dashed #fff; }
 
 .header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -50,7 +49,8 @@ a {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 20px 0; }
+  padding: 20px 90px;
+  z-index: 100; }
 
 .logo {
   width: 30px;
@@ -73,8 +73,7 @@ a {
   color: #fff; }
 
 .menu__link {
-  display: block;
-  text-align: center; }
+  display: block; }
 
 .menu__link-block {
   width: 19px;
@@ -104,7 +103,7 @@ a {
 .home__link {
   display: block;
   margin-top: 55px;
-  padding-bottom: 98px; }
+  padding-bottom: 90px; }
 
 .home__link-ins {
   font-weight: 700;
@@ -119,4 +118,152 @@ a {
 .home__picture {
   position: absolute;
   right: 75px;
+  bottom: -5px; }
+
+.home__line {
+  width: 92%;
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.051); }
+
+.home-navigate {
+  margin-top: 10px; }
+
+.home-navigate__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.home-navigate__item {
+  width: 268px;
+  color: rgba(255, 255, 255, 0.1);
+  font-size: 16px;
+  line-height: 1.5;
+  margin-right: 60px; }
+  .home-navigate__item b {
+    font-size: 18px; }
+
+.works {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.works__content {
+  text-align: center; }
+
+.works__title {
+  font-weight: 900;
+  font-size: 30px;
+  color: #fff; }
+
+.works__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.works__arrow {
+  display: block;
+  width: 54px;
+  height: 54px;
+  border-radius: 50%;
+  background-color: #282828; }
+  .works__arrow_left {
+    margin-right: 48px; }
+  .works__arrow_right {
+    margin-left: 48px; }
+
+.works__item-img {
+  display: inline-block;
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; }
+
+.works__item-title {
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.5);
+  text-transform: uppercase;
+  margin-top: 5px; }
+
+.works__item-text {
+  line-height: 1.5;
+  font-size: 16px;
+  color: #fff;
+  width: 30%;
+  display: inline-block; }
+
+.works__item_active .works__item-img {
+  width: 330px;
+  height: 330px;
+  margin-left: 30px;
+  margin-right: 30px; }
+
+.works__item_active .works__item-title {
+  margin-top: 30px;
+  font-weight: 700;
+  font-size: 18px;
+  color: #fff; }
+
+.about__content {
+  position: absolute;
+  top: 135px;
+  left: 80px; }
+
+.about__title {
+  font-weight: 900;
+  font-size: 82px;
+  color: #fff;
+  width: 48%; }
+
+.about__link {
+  display: block;
+  margin-top: 20px;
+  padding-bottom: 15px; }
+
+.about__link-ins {
+  font-weight: 700;
+  font-size: 14px;
+  color: #fff; }
+
+.about__link-arrow {
+  font-weight: 900;
+  font-size: 20px;
+  color: #fff; }
+
+.about__picture {
+  position: absolute;
+  right: 75px;
   bottom: 0; }
+
+.about-navigate__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.about-navigate__item {
+  width: 148px;
+  height: 70px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border: 11px solid #0f33ff;
+  margin-right: 30px;
+  position: relative; }
+
+.about-navigate__item-text {
+  position: absolute;
+  bottom: -15px;
+  left: 10px;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 700; }
