--- a/scss/layout/basis.scss
+++ b/scss/layout/basis.scss
@@ -15,8 +15,11 @@ li{
 }
 a{
     text-decoration: none;
-    cursor: pointer; 
 }
 *{
     box-sizing: border-box;
+}
+ul,li{
+    margin: 0;
+    padding: 0;
 }
