--- a/scss/layout/layout.scss
+++ b/scss/layout/layout.scss
@@ -5,13 +5,14 @@
     background-color: #0c0c0c
 }
 .container{
-    position: relative;
-    width: 1170px;
-    margin: 0 auto;
+    // position: relative;
+    // width: 1170px;
+    // margin: 0 auto;
 }
 .section{
     position: relative;
     width: 100%;
     height: 100%;
     min-height: 650px;
+    border-bottom: 1px dashed #fff;
 }
