--- a/scss/layout/section/header.scss
+++ b/scss/layout/section/header.scss
@@ -1,12 +1,13 @@
 .header{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    padding: 20px 90px;
+    z-index: 100;
 }
 
 .logo{
@@ -31,7 +32,6 @@
 }
 .menu__link{
     display: block;
-    text-align: center;
 }
 .menu__link-block{
     width: 19px;
