Стилизация секции contact

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,3 +5,4 @@
 @import './layout/section/home.scss';
 @import './layout/section/works.scss';
 @import './layout/section/about.scss';
+@import './layout/section/contact.scss';
