--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ ul, li {
   position: relative;
   width: 100%;
   height: 100%;
-  min-height: 650px;
+  min-height: 720px;
   border-bottom: 1px dashed #fff; }
 
 .header {
@@ -267,3 +267,36 @@ ul, li {
   color: #fff;
   font-size: 14px;
   font-weight: 700; }
+
+.map {
+  width: 100%;
+  height: 750px;
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; }
+
+.contact__block {
+  position: absolute;
+  top: 50%;
+  left: 65%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  width: 300px;
+  height: 370px;
+  background-color: #0b0b0b;
+  -webkit-box-shadow: 0px 0px 29px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 29px 0px rgba(0, 0, 0, 0.75); }
+
+.contact__text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+  color: #fff; }
