--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,3 +6,4 @@
 @import './layout/section/works.scss';
 @import './layout/section/about.scss';
 @import './layout/section/contact.scss';
+@import './layout/section/order.scss';
