--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,3 @@
-body, html {
-  height: 100%;
-  width: 100%; }
-
 body {
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -22,11 +18,19 @@ ul, li {
   margin: 0;
   padding: 0; }
 
+body, html {
+  height: 100%;
+  width: 100%; }
+
 .wrapper {
   overflow: hidden;
   width: 100%;
   min-height: 100%;
   background-color: #0c0c0c; }
+
+.container {
+  width: 1170px;
+  margin: 0 auto; }
 
 .section {
   position: relative;
@@ -36,7 +40,7 @@ ul, li {
   border-bottom: 1px dashed #fff; }
 
 .header {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -49,7 +53,7 @@ ul, li {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 20px 90px;
+  padding: 20px 0;
   z-index: 100; }
 
 .logo {
@@ -85,25 +89,106 @@ ul, li {
   width: 13px;
   margin-left: 3px; }
 
+.nav {
+  position: absolute;
+  z-index: 100;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.nav__line {
+  width: 2px;
+  height: 560px;
+  background-color: rgba(255, 255, 255, 0.051);
+  vertical-align: top; }
+
+.nav__list {
+  display: inline-block;
+  vertical-align: top;
+  margin-left: -2px;
+  height: 500px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.nav__item::before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  width: 2px;
+  height: 2px;
+  background-color: white;
+  margin-right: 10px; }
+
+.nav__item_activ::before {
+  background-color: #0e2088; }
+
+.nav__item_activ .nav-text {
+  display: inline; }
+
+.nav__item_activ .nav__link {
+  color: white;
+  margin-left: -50px; }
+
+.nav__link {
+  font-size: 14px;
+  font-weight: 300;
+  color: rgba(255, 255, 255, 0.3);
+  display: inline-block;
+  vertical-align: middle; }
+
+.nav-text {
+  vertical-align: middle;
+  margin-left: 40px;
+  font-size: 14px;
+  font-weight: 300;
+  color: #fff;
+  display: none; }
+
 .home__content {
   position: absolute;
-  top: 135px;
-  left: 100px; }
+  top: 55%;
+  left: 55%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); }
 
 .home__content-wrap {
-  position: relative; }
+  position: relative;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.051);
+  width: 900px;
+  height: 400px; }
 
 .home__title {
+  position: absolute;
   font-weight: 900;
-  font-size: 82px;
+  font-size: 77px;
   color: #fff;
-  width: 80%;
-  line-height: .95; }
+  width: 50%;
+  line-height: .95;
+  letter-spacing: -3px;
+  left: 14px;
+  top: -10px; }
 
 .home__link {
   display: block;
-  margin-top: 55px;
-  padding-bottom: 90px; }
+  position: absolute;
+  bottom: 107px;
+  left: 11px; }
 
 .home__link-ins {
   font-weight: 700;
@@ -117,13 +202,8 @@ ul, li {
 
 .home__picture {
   position: absolute;
-  right: 75px;
-  bottom: -5px; }
-
-.home__line {
-  width: 92%;
-  height: 2px;
-  background-color: rgba(255, 255, 255, 0.051); }
+  right: -12px;
+  bottom: -6px; }
 
 .home-navigate {
   margin-top: 10px; }
@@ -139,27 +219,26 @@ ul, li {
   font-size: 16px;
   line-height: 1.5;
   margin-right: 60px; }
+  .home-navigate__item:last-child {
+    margin-right: 0; }
   .home-navigate__item b {
     font-size: 18px; }
 
-.works {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
-
 .works__content {
-  text-align: center; }
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 100%; }
 
 .works__title {
   font-weight: 900;
   font-size: 30px;
-  color: #fff; }
+  color: #fff;
+  margin-bottom: 50px; }
 
 .works__list {
   display: -webkit-box;
@@ -170,6 +249,7 @@ ul, li {
   align-items: center; }
 
 .works__arrow {
+  position: relative;
   display: block;
   width: 54px;
   height: 54px;
@@ -180,8 +260,32 @@ ul, li {
   .works__arrow_right {
     margin-left: 48px; }
 
+.mdi-arrow-left, .mdi-arrow-right {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-size: 24px;
+  color: #fff; }
+
+.works__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
 .works__item-img {
-  display: inline-block;
   width: 170px;
   height: 170px;
   border-radius: 50%;
@@ -195,12 +299,11 @@ ul, li {
   text-transform: uppercase;
   margin-top: 5px; }
 
-.works__item-text {
+.works__item-content {
   line-height: 1.5;
-  font-size: 16px;
+  font-size: 10px;
   color: #fff;
-  width: 30%;
-  display: inline-block; }
+  width: 40%; }
 
 .works__item_active .works__item-img {
   width: 330px;
@@ -213,6 +316,10 @@ ul, li {
   font-weight: 700;
   font-size: 18px;
   color: #fff; }
+
+.works__item_active .works__item-content {
+  opacity: 1;
+  font-size: 16px; }
 
 .about__content {
   position: absolute;
@@ -354,6 +461,20 @@ ul, li {
   .order__item_margin {
     margin-left: 0; }
 
+.order__checkbox {
+  position: absolute;
+  left: -9999px; }
+
+.order__checkbox:checked + .order__link {
+  background: #0f33ff;
+  border: 2px solid transparent; }
+  .order__checkbox:checked + .order__link .mdi-check {
+    font-size: 18px; }
+
+.mdi-check {
+  color: #fff;
+  font-size: 0; }
+
 .order__link {
   display: inline-block;
   width: 200px;
@@ -365,7 +486,10 @@ ul, li {
   font-size: 18px;
   font-weight: 700;
   color: #fff;
-  cursor: pointer; }
+  cursor: pointer;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s; }
 
 .order__form {
   margin-top: 70px;
