--- a/scss/layout/layout.scss
+++ b/scss/layout/layout.scss
@@ -6,8 +6,8 @@
 }
 .container{
     // position: relative;
-    // width: 1170px;
-    // margin: 0 auto;
+    width: 1170px;
+    margin: 0 auto;
 }
 .section{
     position: relative;
