--- a/scss/layout/section/header.scss
+++ b/scss/layout/section/header.scss
@@ -1,12 +1,12 @@
 .header{
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 90px;
+    padding: 20px 0;
     z-index: 100;
 }
 
