--- a/scss/layout/section/works.scss
+++ b/scss/layout/section/works.scss
@@ -1,21 +1,26 @@
 .works{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   
 }
 .works__content{
    text-align: center;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   width: 100%;
 }
 .works__title{
     font-weight: 900;
     font-size: 30px;
     color: #fff;
+    margin-bottom: 50px;
 }
 .works__list{
     display: flex;
     align-items: center;
 }
 .works__arrow{
+    position: relative;
     display: block;
     width: 54px;
     height: 54px;
@@ -28,15 +33,22 @@
         margin-left: 48px;
     }
 }
-.works__item{
-    //margin-right: 30px;
-   
+.mdi-arrow-left, .mdi-arrow-right{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 24px;
+    color: #fff;
 }
-// .works__item:nth-child(3){
-//     margin-right: 0;
-// }
+.works__item{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .works__item-img{
-    display: inline-block;
+    //display: inline-block;
     width: 170px;
     height: 170px;
     border-radius: 50%;
@@ -50,12 +62,13 @@
     text-transform: uppercase;
     margin-top: 5px;
 }
-.works__item-text{
+.works__item-content{
+    //display: inline-block;
     line-height: 1.5;
-    font-size: 16px;
+    font-size: 10px;
     color: #fff;
-    width: 30%;
-    display: inline-block;
+    width: 40%;
+   // opacity: 0;
 }
 .works__item_active{
     .works__item-img{
@@ -71,7 +84,8 @@
         color: #fff;
     }
     .works__item-content{
-        
+        opacity: 1;
+        font-size: 16px;
     }
 }
 
