--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import './layout/basis.scss';
 @import './layout/layout.scss';
 @import './layout/section/header.scss';
+@import './layout/section/nav.scss';
 @import './layout/section/home.scss';
 @import './layout/section/works.scss';
 @import './layout/section/about.scss';
