--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body, html {
   background-color: #0c0c0c; }
 
 .container {
-  width: 1170px;
+  width: 90%;
   margin: 0 auto; }
 
 .section {
@@ -38,6 +38,14 @@ body, html {
   height: 100%;
   min-height: 720px;
   border-bottom: 1px dashed #fff; }
+
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 15px; } }
+
+@media screen and (max-width: 480px) {
+  html {
+    font-size: 14px; } }
 
 .header {
   position: absolute;
@@ -53,41 +61,43 @@ body, html {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 20px 0;
+  padding: 1.25rem 0;
   z-index: 100; }
 
 .logo {
-  width: 30px;
-  height: 28px;
+  width: 1.875rem;
+  height: 1.75rem;
   vertical-align: middle; }
 
 .logo__link-text {
   vertical-align: middle;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 1rem;
   color: #fff;
-  margin-left: 10px; }
+  margin-left: 0.625rem; }
 
 .header__link {
-  display: block;
-  padding: 10px 15px;
+  display: inline-block;
+  padding: 0.5rem 1rem;
   background-color: #0f33ff;
   font-weight: 700;
-  font-size: 14px;
-  color: #fff; }
+  font-size: 0.875rem;
+  color: #fff;
+  margin-right: 5.625rem;
+  cursor: pointer; }
 
 .menu__link {
   display: block; }
 
 .menu__link-block {
-  width: 19px;
-  height: 2px;
+  width: 1.1875rem;
+  height: 0.125rem;
   background-color: #fff;
-  margin-bottom: 4px; }
+  margin-bottom: 0.25rem; }
 
 .menu__link-block_width {
-  width: 13px;
-  margin-left: 3px; }
+  width: 0.8125rem;
+  margin-left: 0.1875rem; }
 
 .nav {
   position: absolute;
@@ -104,16 +114,16 @@ body, html {
   align-items: center; }
 
 .nav__line {
-  width: 2px;
-  height: 560px;
+  width: 0.125rem;
+  height: 35rem;
   background-color: rgba(255, 255, 255, 0.051);
   vertical-align: top; }
 
 .nav__list {
   display: inline-block;
   vertical-align: top;
-  margin-left: -2px;
-  height: 500px;
+  margin-left: -0.125rem;
+  height: 31.25rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -129,10 +139,10 @@ body, html {
   content: "";
   display: inline-block;
   vertical-align: middle;
-  width: 2px;
-  height: 2px;
+  width: 0.125rem;
+  height: 0.125rem;
   background-color: white;
-  margin-right: 10px; }
+  margin-right: 0.625rem; }
 
 .nav__item_activ::before {
   background-color: #0e2088; }
@@ -142,10 +152,10 @@ body, html {
 
 .nav__item_activ .nav__link {
   color: white;
-  margin-left: -50px; }
+  margin-left: -3.125rem; }
 
 .nav__link {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 300;
   color: rgba(255, 255, 255, 0.3);
   display: inline-block;
@@ -153,8 +163,8 @@ body, html {
 
 .nav-text {
   vertical-align: middle;
-  margin-left: 40px;
-  font-size: 14px;
+  margin-left: 2.5rem;
+  font-size: 0.875rem;
   font-weight: 300;
   color: #fff;
   display: none; }
@@ -162,51 +172,78 @@ body, html {
 .home__content {
   position: absolute;
   top: 55%;
-  left: 55%;
+  left: 67%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+  width: 100%; }
 
 .home__content-wrap {
   position: relative;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.051);
-  width: 900px;
-  height: 400px; }
+  border-bottom: 0.125rem solid rgba(255, 255, 255, 0.051);
+  width: 56.25rem;
+  height: 25rem; }
 
 .home__title {
   position: absolute;
   font-weight: 900;
-  font-size: 77px;
+  font-size: 4.8125rem;
   color: #fff;
   width: 50%;
   line-height: .95;
-  letter-spacing: -3px;
-  left: 14px;
-  top: -10px; }
+  letter-spacing: -0.1875rem;
+  left: 0.875rem;
+  top: -0.625rem; }
 
 .home__link {
   display: block;
   position: absolute;
-  bottom: 107px;
-  left: 11px; }
+  bottom: 6.6875rem;
+  left: 0.6875rem;
+  width: 5.625rem;
+  background-color: #0f33ff;
+  height: 2.25rem; }
+  .home__link:hover .home__link-block {
+    left: -1.8125rem; }
+
+.home__link-block {
+  display: inline-block;
+  width: 1.875rem;
+  background-color: #0f33ff;
+  height: 2.25rem;
+  position: absolute;
+  left: 0;
+  top: 0rem;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s; }
+
+.home__link-text-wrap {
+  position: absolute;
+  top: 50%;
+  left: -1.375rem;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%); }
 
 .home__link-ins {
   font-weight: 700;
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #fff; }
 
 .home__link-arrow {
   font-weight: 900;
-  font-size: 20px;
-  color: #fff; }
+  font-size: 1.25rem;
+  color: #fff;
+  vertical-align: middle; }
 
 .home__picture {
   position: absolute;
-  right: -12px;
-  bottom: -6px; }
+  right: -0.75rem;
+  bottom: -0.375rem; }
 
 .home-navigate {
-  margin-top: 10px; }
+  margin-top: 0.625rem; }
 
 .home-navigate__list {
   display: -webkit-box;
@@ -214,31 +251,32 @@ body, html {
   display: flex; }
 
 .home-navigate__item {
-  width: 268px;
+  width: 16.75rem;
   color: rgba(255, 255, 255, 0.1);
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1.5;
-  margin-right: 60px; }
+  margin-right: 3.75rem; }
   .home-navigate__item:last-child {
     margin-right: 0; }
   .home-navigate__item b {
-    font-size: 18px; }
+    font-size: 1.125rem; }
 
 .works__content {
-  text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  text-align: center;
   width: 100%; }
 
 .works__title {
   font-weight: 900;
-  font-size: 30px;
+  font-size: 1.6875rem;
   color: #fff;
-  margin-bottom: 50px; }
+  margin-bottom: 1.25rem;
+  display: inline-block; }
 
 .works__list {
   display: -webkit-box;
@@ -246,111 +284,123 @@ body, html {
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
 
 .works__arrow {
   position: relative;
   display: block;
-  width: 54px;
-  height: 54px;
+  width: 3.375rem;
+  height: 3.375rem;
   border-radius: 50%;
   background-color: #282828; }
   .works__arrow_left {
-    margin-right: 48px; }
+    position: absolute;
+    top: 45%;
+    left: 10%; }
   .works__arrow_right {
-    margin-left: 48px; }
+    position: absolute;
+    top: 45%;
+    right: 10%; }
 
-.mdi-arrow-left, .mdi-arrow-right {
+.works__arrow-icon {
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  font-size: 24px;
+  font-size: 1.5rem;
   color: #fff; }
 
-.works__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
-
 .works__item-img {
-  width: 170px;
-  height: 170px;
+  width: 10.625rem;
+  height: 10.625rem;
   border-radius: 50%;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover; }
 
+.works__item-content {
+  text-align: center; }
+
 .works__item-title {
-  font-size: 12px;
+  font-size: 0.75rem;
   color: rgba(255, 255, 255, 0.5);
   text-transform: uppercase;
-  margin-top: 5px; }
+  margin-top: 0.3125rem; }
 
-.works__item-content {
+.works__item-text {
   line-height: 1.5;
-  font-size: 10px;
+  font-size: 0.3125rem;
   color: #fff;
-  width: 40%; }
+  width: 40%;
+  display: inline-block;
+  opacity: 0; }
 
-.works__item_active .works__item-img {
-  width: 330px;
-  height: 330px;
-  margin-left: 30px;
-  margin-right: 30px; }
-
-.works__item_active .works__item-title {
-  margin-top: 30px;
-  font-weight: 700;
-  font-size: 18px;
-  color: #fff; }
-
-.works__item_active .works__item-content {
-  opacity: 1;
-  font-size: 16px; }
+.works__item_active {
+  position: relative;
+  top: 1.875rem; }
+  .works__item_active .works__item-img {
+    width: 20.625rem;
+    height: 20.625rem;
+    margin-left: 3.125rem;
+    margin-right: 3.125rem; }
+  .works__item_active .works__item-title {
+    margin-top: 1.875rem;
+    font-weight: 700;
+    font-size: 1.125rem;
+    color: #fff; }
+  .works__item_active .works__item-text {
+    font-size: 1rem;
+    width: 16.875rem;
+    opacity: 1; }
 
 .about__content {
   position: absolute;
-  top: 135px;
-  left: 80px; }
+  top: 8.4375rem;
+  left: 5rem; }
 
 .about__title {
   font-weight: 900;
-  font-size: 82px;
+  font-size: 4.75rem;
   color: #fff;
-  width: 48%; }
+  width: 40%;
+  margin-left: 7.1875rem;
+  line-height: 1; }
 
 .about__link {
   display: block;
-  margin-top: 20px;
-  padding-bottom: 15px; }
+  margin-top: 2.4375rem;
+  padding-bottom: 2.9375rem;
+  margin-left: 7.625rem; }
+  .about__link:hover .about__link-arrow {
+    margin-left: 1.25rem; }
 
 .about__link-ins {
   font-weight: 700;
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #fff; }
 
 .about__link-arrow {
   font-weight: 900;
-  font-size: 20px;
-  color: #fff; }
+  font-size: 1.4375rem;
+  color: #fff;
+  vertical-align: middle;
+  margin-left: 0.625rem;
+  -webkit-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s; }
 
 .about__picture {
   position: absolute;
-  right: 75px;
-  bottom: 0; }
+  right: 7.3125rem;
+  bottom: -1.75rem; }
+
+.about-navigate {
+  margin-left: 7.6875rem; }
 
 .about-navigate__list {
   display: -webkit-box;
@@ -358,26 +408,58 @@ body, html {
   display: flex; }
 
 .about-navigate__item {
-  width: 148px;
-  height: 70px;
+  width: 10.625rem;
+  height: 5.75rem;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  border: 11px solid #0f33ff;
-  margin-right: 30px;
+  border: 0.6875rem solid #0f33ff;
+  margin-right: 1.875rem;
   position: relative; }
+  .about-navigate__item:hover .about-navigate__item-text {
+    bottom: -1.5625rem; }
 
 .about-navigate__item-text {
   position: absolute;
-  bottom: -15px;
-  left: 10px;
+  bottom: -0.9375rem;
+  left: 0.625rem;
   color: #fff;
-  font-size: 14px;
-  font-weight: 700; }
+  font-size: 0.875rem;
+  font-weight: 700;
+  letter-spacing: -0.0625rem;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s; }
+
+.svg-rect {
+  position: absolute;
+  bottom: 18.4375rem;
+  left: 30.1875rem; }
+
+.svg-circle {
+  position: absolute;
+  top: 12.625rem;
+  left: 32.125rem; }
+
+.svg-polygon {
+  position: absolute;
+  top: 7.0625rem;
+  left: 25.9375rem; }
+
+.svg-rhomb {
+  position: absolute;
+  top: 11.6875rem;
+  left: 40.75rem;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transform-origin: center;
+  -ms-transform-origin: center;
+  transform-origin: center; }
 
 .map {
   width: 100%;
-  height: 750px;
+  height: 46.875rem;
   position: relative;
   background-repeat: no-repeat;
   background-position: center;
@@ -385,16 +467,16 @@ body, html {
 
 .contact__block {
   position: absolute;
-  top: 50%;
-  left: 65%;
+  top: 45%;
+  left: 59%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
-  width: 300px;
-  height: 370px;
+  width: 18.75rem;
+  height: 23.125rem;
   background-color: #0b0b0b;
-  -webkit-box-shadow: 0px 0px 29px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 29px 0px rgba(0, 0, 0, 0.75); }
+  -webkit-box-shadow: 0rem 0rem 1.8125rem 0rem rgba(0, 0, 0, 0.75);
+  box-shadow: 0rem 0rem 1.8125rem 0rem rgba(0, 0, 0, 0.75); }
 
 .contact__block-content {
   position: absolute;
@@ -406,21 +488,21 @@ body, html {
   text-align: center; }
 
 .contact__text {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 700;
   color: #fff; }
 
 .contact__text-data {
-  margin-bottom: 25px;
+  margin-bottom: 1.4375rem;
   white-space: nowrap; }
 
 .contact__btns-link {
   display: inline-block;
-  padding: 15px 30px;
-  font-size: 14px;
+  padding: 0.9375rem 1.875rem;
+  font-size: 0.875rem;
   font-weight: 700;
   color: #fff;
-  margin-bottom: 25px; }
+  margin-bottom: 1.5625rem; }
   .contact__btns-link:last-child {
     margin-bottom: 0; }
   .contact__btns-link_one {
@@ -438,7 +520,15 @@ body, html {
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  width: 730px; }
+  width: 45.625rem; }
+
+.order__title {
+  font-size: 1.875rem;
+  color: white;
+  line-height: 2.4; }
+
+.order__form {
+  text-align: center; }
 
 .order__list {
   display: -webkit-box;
@@ -451,8 +541,8 @@ body, html {
   justify-content: center; }
 
 .order__item {
-  margin-top: 40px;
-  margin-left: 53px;
+  margin-top: 2.5rem;
+  margin-left: 3.3125rem;
   display: inline-block; }
   .order__item:first-child {
     margin-left: 0; }
@@ -463,13 +553,13 @@ body, html {
 
 .order__checkbox {
   position: absolute;
-  left: -9999px; }
+  left: -624.9375rem; }
 
 .order__checkbox:checked + .order__link {
   background: #0f33ff;
-  border: 2px solid transparent; }
+  border: 0.125rem solid transparent; }
   .order__checkbox:checked + .order__link .mdi-check {
-    font-size: 18px; }
+    font-size: 1.125rem; }
 
 .mdi-check {
   color: #fff;
@@ -477,13 +567,13 @@ body, html {
 
 .order__link {
   display: inline-block;
-  width: 200px;
-  height: 50px;
+  width: 12.5rem;
+  height: 3.125rem;
   text-align: center;
   line-height: 2.6;
   background: transparent;
-  border: 2px solid #fff;
-  font-size: 18px;
+  border: 0.125rem solid #fff;
+  font-size: 1.125rem;
   font-weight: 700;
   color: #fff;
   cursor: pointer;
@@ -491,30 +581,29 @@ body, html {
   -o-transition: 0.4s;
   transition: 0.4s; }
 
-.order__form {
-  margin-top: 70px;
-  text-align: center; }
+.order__input-wrap {
+  margin-top: 2.625rem; }
 
 .order__input {
   background-color: transparent;
   border: transparent;
-  border-bottom: 2px solid #fff;
-  font-size: 30px;
+  border-bottom: 0.125rem solid #fff;
+  font-size: 1.875rem;
   font-weight: 300;
   color: #fff;
-  width: 320px; }
+  width: 20rem; }
   .order__input_email {
-    margin-left: 65px; }
+    margin-left: 4.0625rem; }
   .order__input:focus {
     outline: none; }
 
 .order__btn {
-  margin-top: 64px;
-  width: 400px;
-  height: 50px;
+  margin-top: 4rem;
+  width: 25rem;
+  height: 3.125rem;
   background-color: #0f33ff;
   border: transparent;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 700;
   color: #fff; }
