--- a/scss/layout/section/contact.scss
+++ b/scss/layout/section/contact.scss
@@ -1,6 +1,6 @@
 .map{
     width: 100%;
-    height: 750px;
+    height: rem(750px);
     position: relative;
     background-repeat: no-repeat;
     background-position: center;
@@ -8,13 +8,13 @@
 }
 .contact__block{
     position: absolute;
-    top: 50%;
-    left: 65%;
+    top: 45%;
+    left: 59%;
     transform: translateY(-50%);
-    width: 300px;
-    height: 370px;
+    width: rem(300px);
+    height: rem(370px);
     background-color: #0b0b0b;
-    box-shadow: 0px 0px 29px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: rem(0px) rem(0px) rem(29px) rem(0px) rgba(0, 0, 0, 0.75);
 }
 .contact__block-content{
     position: absolute;
@@ -24,21 +24,21 @@
     text-align: center;
 }
 .contact__text{  
-    font-size: 14px;
+    font-size: rem(14px);
     font-weight: 700;
     color: #fff;
 }
 .contact__text-data{
-    margin-bottom: 25px;
+    margin-bottom: rem(23px);
     white-space: nowrap;
 }
 .contact__btns-link{
     display: inline-block;
-    padding: 15px 30px;
-    font-size: 14px;
+    padding: rem(15px) rem(30px);
+    font-size: rem(14px);
     font-weight: 700;
     color: #fff;
-    margin-bottom: 25px;
+    margin-bottom: rem(25px);
 
     &:last-child{
         margin-bottom: 0;
