--- a/scss/layout/section/nav.scss
+++ b/scss/layout/section/nav.scss
@@ -7,16 +7,16 @@
     align-items: center;
 }
 .nav__line{
-    width: 2px;
-    height: 560px;
+    width: rem(2px);
+    height: rem(560px);
     background-color: rgba(255, 255, 255, 0.051);
     vertical-align: top;
 }
 .nav__list{
     display: inline-block;
     vertical-align: top;
-    margin-left: -2px;
-    height: 500px;
+    margin-left: rem(-2px);
+    height: rem(500px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -26,10 +26,10 @@
         content: "";
         display: inline-block;
         vertical-align: middle;
-        width: 2px;
-        height: 2px;
+        width: rem(2px);
+        height: rem(2px);
         background-color: rgb(255, 255, 255);
-        margin-right: 10px;
+        margin-right: rem(10px);
     }
 }
 .nav__item_activ{
@@ -41,11 +41,11 @@
     }
     .nav__link{
         color: rgba(255, 255, 255, 1);
-        margin-left: -50px;
+        margin-left: rem(-50px);
     }
 }
 .nav__link{
-    font-size: 14px;
+    font-size: rem(14px);
     font-weight: 300;
     color: rgba(255, 255, 255, 0.3);
     display: inline-block;
@@ -53,8 +53,8 @@
 }
 .nav-text{
     vertical-align: middle;
-    margin-left: 40px;
-    font-size: 14px;
+    margin-left: rem(40px);
+    font-size: rem(14px);
     font-weight: 300;
     color: #fff;
     display: none;
