--- a/scss/layout/section/works.scss
+++ b/scss/layout/section/works.scss
@@ -1,91 +1,99 @@
-.works{
-   
-}
+
 .works__content{
-   text-align: center;
+   //width: rem(970px);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
+   text-align: center;
    width: 100%;
 }
 .works__title{
     font-weight: 900;
-    font-size: 30px;
+    font-size: rem(27px);
     color: #fff;
-    margin-bottom: 50px;
+    margin-bottom: rem(20px);
+    display: inline-block;
 }
 .works__list{
-    display: flex;
-    align-items: center;
+   display: flex;
+   align-items: center;
+   justify-content: center;
 }
 .works__arrow{
     position: relative;
     display: block;
-    width: 54px;
-    height: 54px;
+    width: rem(54px);
+    height: rem(54px);
     border-radius: 50%;
     background-color: #282828;
     &_left{
-        margin-right: 48px;
+        position: absolute;
+        top: 45%;
+        left: 10% 
     }
     &_right{
-        margin-left: 48px;
+        position: absolute;
+        top: 45%;
+        right: 10%;
     }
 }
-.mdi-arrow-left, .mdi-arrow-right{
+.works__arrow-icon{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    font-size: 24px;
+    font-size: rem(24px);
     color: #fff;
 }
 .works__item{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    //width: 33.33%;
+    //width: rem(170px);
 }
 .works__item-img{
-    //display: inline-block;
-    width: 170px;
-    height: 170px;
+    width: rem(170px);
+    height: rem(170px);
     border-radius: 50%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
+.works__item-content{
+    text-align: center;
+}
 .works__item-title{
-    font-size: 12px;
+    font-size: rem(12px);
     color: rgba(255, 255, 255, 0.5);
     text-transform: uppercase;
-    margin-top: 5px;
+    margin-top: rem(5px);
 }
-.works__item-content{
-    //display: inline-block;
+.works__item-text{
     line-height: 1.5;
-    font-size: 10px;
+    font-size: rem(5px);
     color: #fff;
     width: 40%;
-   // opacity: 0;
+    display: inline-block;
+    opacity: 0;
 }
 .works__item_active{
+    position: relative;
+    top: rem(30px);
     .works__item-img{
-        width: 330px;
-        height: 330px;
-        margin-left: 30px;
-        margin-right: 30px;
+        width: rem(330px);
+        height: rem(330px);
+        margin-left: rem(50px);
+        margin-right: rem(50px);
     }
     .works__item-title{
-        margin-top: 30px;
+        margin-top: rem(30px);
         font-weight: 700;
-        font-size: 18px;
+        font-size: rem(18px);
         color: #fff;
     }
-    .works__item-content{
+    .works__item-text{
+        font-size: rem(16px);
+        width: rem(270px);
         opacity: 1;
-        font-size: 16px;
     }
 }
 
