--- a/scss/layout/section/works.scss
+++ b/scss/layout/section/works.scss
@@ -7,21 +7,37 @@
    transform: translate(-50%, -50%);
    text-align: center;
    width: 100%;
+   height: 100%;
 }
 .works__title{
     font-weight: 900;
     font-size: rem(27px);
     color: #fff;
-    margin-bottom: rem(20px);
     display: inline-block;
+    position: absolute;
+    top: 16%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.works__slider{
+    margin: 0 auto;
+    width: 83%;
+    height: 100%;
+    position: relative;
+    top: 55%;
+    transform: translateY(-50%);
 }
 .works__list{
+    width: 79%;
+    height: 100%;
+    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: center;
+   position: relative;
 }
 .works__arrow{
-    position: relative;
+    position: absolute;
     display: block;
     width: rem(54px);
     height: rem(54px);
@@ -30,12 +46,12 @@
     &_left{
         position: absolute;
         top: 45%;
-        left: 10% 
+        left: 0;
     }
     &_right{
         position: absolute;
         top: 45%;
-        right: 10%;
+        right: 0;
     }
 }
 .works__arrow-icon{
@@ -47,8 +63,15 @@
     color: #fff;
 }
 .works__item{
-    //width: 33.33%;
-    //width: rem(170px);
+   position: absolute;
+    &_left{
+        width: rem(170px);
+        left: 0;
+    }
+    &_right{
+        width: rem(170px);
+        right: 0;
+    }
 }
 .works__item-img{
     width: rem(170px);
@@ -76,13 +99,15 @@
     opacity: 0;
 }
 .works__item_active{
-    position: relative;
-    top: rem(30px);
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: rem(330px);
+    margin-top: 20px;
+    z-index: 10;
     .works__item-img{
         width: rem(330px);
         height: rem(330px);
-        margin-left: rem(50px);
-        margin-right: rem(50px);
     }
     .works__item-title{
         margin-top: rem(30px);
@@ -94,6 +119,7 @@
         font-size: rem(16px);
         width: rem(270px);
         opacity: 1;
+        margin-top: 20px;
     }
 }
 
