--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ body, html {
 
 @media screen and (max-width: 480px) {
   html {
-    font-size: 14px; } }
+    font-size: 13px; } }
 
 .header {
   position: absolute;
@@ -100,7 +100,7 @@ body, html {
   margin-left: 0.1875rem; }
 
 .nav {
-  position: absolute;
+  position: fixed;
   z-index: 100;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -112,6 +112,9 @@ body, html {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
+  @media screen and (max-width: 768px) {
+    .nav {
+      display: none; } }
 
 .nav__line {
   width: 0.125rem;
@@ -170,30 +173,36 @@ body, html {
   display: none; }
 
 .home__content {
-  position: absolute;
-  top: 55%;
-  left: 67%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  width: 100%; }
+  width: 78%;
+  height: 90%;
+  margin: 0 auto;
+  position: relative;
+  top: 8.625rem; }
+  @media screen and (max-width: 768px) {
+    .home__content {
+      top: 12.5rem;
+      margin: 0 0; } }
 
 .home__content-wrap {
   position: relative;
   border-bottom: 0.125rem solid rgba(255, 255, 255, 0.051);
-  width: 56.25rem;
+  width: 100%;
   height: 25rem; }
+  @media screen and (max-width: 992px) {
+    .home__content-wrap {
+      border-bottom: 0.125rem solid transparent; } }
 
 .home__title {
   position: absolute;
   font-weight: 900;
   font-size: 4.8125rem;
   color: #fff;
-  width: 50%;
+  width: 27.5rem;
   line-height: .95;
   letter-spacing: -0.1875rem;
   left: 0.875rem;
-  top: -0.625rem; }
+  top: -0.625rem;
+  z-index: 2; }
 
 .home__link {
   display: block;
@@ -241,9 +250,15 @@ body, html {
   position: absolute;
   right: -0.75rem;
   bottom: -0.375rem; }
+  @media screen and (max-width: 992px) {
+    .home__picture {
+      display: none; } }
 
 .home-navigate {
   margin-top: 0.625rem; }
+  @media screen and (max-width: 768px) {
+    .home-navigate {
+      display: none; } }
 
 .home-navigate__list {
   display: -webkit-box;
@@ -255,11 +270,17 @@ body, html {
   color: rgba(255, 255, 255, 0.1);
   font-size: 1rem;
   line-height: 1.5;
-  margin-right: 3.75rem; }
+  margin-right: 3.5rem;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s; }
   .home-navigate__item:last-child {
     margin-right: 0; }
   .home-navigate__item b {
     font-size: 1.125rem; }
+  .home-navigate__item:hover {
+    color: white; }
 
 .works__content {
   position: absolute;
@@ -283,6 +304,9 @@ body, html {
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%); }
+  @media screen and (max-width: 768px) {
+    .works__title {
+      top: 25%; } }
 
 .works__slider {
   margin: 0 auto;
@@ -340,9 +364,15 @@ body, html {
   .works__item_left {
     width: 10.625rem;
     left: 0; }
+    @media screen and (max-width: 768px) {
+      .works__item_left {
+        display: none; } }
   .works__item_right {
     width: 10.625rem;
     right: 0; }
+    @media screen and (max-width: 768px) {
+      .works__item_right {
+        display: none; } }
 
 .works__item-img {
   width: 10.625rem;
@@ -378,19 +408,32 @@ body, html {
   width: 20.625rem;
   margin-top: 20px;
   z-index: 10; }
+  @media screen and (max-width: 768px) {
+    .works__item_active {
+      width: 10.625rem; } }
   .works__item_active .works__item-img {
     width: 20.625rem;
     height: 20.625rem; }
+    @media screen and (max-width: 768px) {
+      .works__item_active .works__item-img {
+        width: 10.625rem;
+        height: 10.625rem; } }
   .works__item_active .works__item-title {
     margin-top: 1.875rem;
     font-weight: 700;
     font-size: 1.125rem;
     color: #fff; }
+    @media screen and (max-width: 768px) {
+      .works__item_active .works__item-title {
+        width: 10.625rem; } }
   .works__item_active .works__item-text {
     font-size: 1rem;
     width: 16.875rem;
     opacity: 1;
     margin-top: 20px; }
+    @media screen and (max-width: 768px) {
+      .works__item_active .works__item-text {
+        width: 10.625rem; } }
 
 .about__content {
   width: 78%;
@@ -398,11 +441,18 @@ body, html {
   margin: 0 auto;
   position: relative;
   top: 138px; }
+  @media screen and (max-width: 768px) {
+    .about__content {
+      top: 200px;
+      margin: 0 0; } }
 
 .about__title {
   position: relative;
-  width: 47.5%;
+  width: 27.1875rem;
   margin-left: 4.8125rem; }
+  @media screen and (max-width: 768px) {
+    .about__title {
+      margin-left: 0; } }
 
 .about__title-text {
   font-weight: 900;
@@ -443,6 +493,9 @@ body, html {
   margin-left: 4.8125rem; }
   .about__link:hover .about__link-arrow {
     margin-left: 1.25rem; }
+  @media screen and (max-width: 768px) {
+    .about__link {
+      margin-left: 0; } }
 
 .about__link-ins {
   font-weight: 700;
@@ -463,9 +516,15 @@ body, html {
   position: absolute;
   right: -0.625rem;
   bottom: -1.5625rem; }
+  @media screen and (max-width: 992px) {
+    .about__picture {
+      display: none; } }
 
 .about-navigate {
   margin-left: 4.8125rem; }
+  @media screen and (max-width: 768px) {
+    .about-navigate {
+      display: none; } }
 
 .about-navigate__list {
   display: -webkit-box;
@@ -569,26 +628,50 @@ body, html {
 .order__form {
   text-align: center; }
 
-.order__list {
+@media screen and (max-width: 768px) {
+  .order__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    width: 80%;
+    margin: 0 auto; } }
+
+.order__list-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around; }
+  @media screen and (max-width: 768px) {
+    .order__list-top {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
+
+.order__list-bottom {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center; }
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  width: 65%;
+  margin: 0 auto; }
+  @media screen and (max-width: 768px) {
+    .order__list-bottom {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      margin: 0 0;
+      width: 35%; } }
 
 .order__item {
-  margin-top: 2.5rem;
-  margin-left: 3.3125rem;
-  display: inline-block; }
-  .order__item:first-child {
-    margin-left: 0; }
-  .order__item:nth-child(4) {
-    margin-left: 0; }
-  .order__item_margin {
-    margin-left: 0; }
+  margin-top: 2.5rem; }
 
 .order__checkbox {
   position: absolute;
@@ -631,6 +714,9 @@ body, html {
   font-weight: 300;
   color: #fff;
   width: 20rem; }
+  @media screen and (max-width: 768px) {
+    .order__input {
+      width: 11.875rem; } }
   .order__input_email {
     margin-left: 4.0625rem; }
   .order__input:focus {
