--- a/scss/layout/section/home.scss
+++ b/scss/layout/section/home.scss
@@ -1,26 +1,34 @@
 .home__content{
-    position: absolute;
-    top: 55%;
-    left: 67%;
-    transform: translate(-50%, -50%);
-    width: 100%;
+    width: 78%;
+    height: 90%;
+    margin: 0 auto;
+    position: relative;
+    top: rem(138px);
+    @include tablets{
+        top: rem(200px);
+        margin: 0 0;
+    }   
 }
 .home__content-wrap{
     position: relative;
     border-bottom: rem(2px) solid rgba(255, 255, 255, 0.051);
-    width: rem(900px);
-    height: rem(400px);    
+    width: 100%;
+    height: rem(400px); 
+    @include laptop{
+        border-bottom: rem(2px) solid transparent;
+    }   
 }
 .home__title{
     position: absolute;
     font-weight: 900;
     font-size: rem(77px);
     color: #fff;
-    width: 50%;
+    width: rem(440px);
     line-height: .95;
     letter-spacing: rem(-3px);
     left: rem(14px);
-    top: rem(-10px); 
+    top: rem(-10px);
+    z-index: 2; 
 }
 .home__link{
     display: block;
@@ -51,7 +59,6 @@
     transform: translateY(-50%);
 }
 .home__link-ins{
-   // margin-left: rem(-22px);
     font-weight: 700;
     font-size: rem(14px);
     color: #fff;
@@ -66,9 +73,15 @@
     position: absolute;
     right: rem(-12px);
     bottom: rem(-6px);
+    @include laptop{
+        display: none;
+    }
 }
 .home-navigate{
     margin-top: rem(10px);
+    @include tablets{
+        display: none;
+    }
 }
 .home-navigate__list{
     display: flex;
@@ -78,11 +91,16 @@
     color: rgba(255, 255, 255, 0.1);
     font-size: rem(16px);
     line-height: 1.5;
-    margin-right: rem(60px);
+    margin-right: rem(56px);
+    cursor: pointer;
+    transition: 0.3s;
     &:last-child{
         margin-right: 0;
     }
     b{
         font-size: rem(18px);
+    }
+    &:hover{
+        color: rgba(255, 255, 255, 1);
     }
 }
