--- a/css/main.css
+++ b/css/main.css
@@ -25,19 +25,23 @@ body, html {
 .wrapper {
   overflow: hidden;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   background-color: #0c0c0c; }
 
 .container {
   width: 87%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  height: 100%;
+  position: relative;
+  top: 0%;
+  -webkit-transition: top 1s;
+  -o-transition: top 1s;
+  transition: top 1s; }
 
 .section {
   position: relative;
   width: 100%;
-  height: 100%;
-  min-height: 720px;
-  border-bottom: 1px dashed #fff; }
+  height: 100%; }
 
 @media screen and (max-width: 768px) {
   html {
@@ -83,26 +87,19 @@ body, html {
   font-weight: 700;
   font-size: 0.875rem;
   color: #fff;
-  margin-right: 5.625rem;
+  margin-left: 50px;
   cursor: pointer; }
 
 .menu__link {
-  display: block; }
-
-.menu__link-block {
-  width: 1.1875rem;
-  height: 0.125rem;
-  background-color: #fff;
-  margin-bottom: 0.25rem; }
-
-.menu__link-block_width {
-  width: 0.8125rem;
-  margin-left: 0.1875rem; }
+  display: block;
+  color: #fff;
+  font-weight: 700; }
 
 .nav {
   position: fixed;
   z-index: 100;
   top: 50%;
+  left: 6%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
@@ -147,13 +144,13 @@ body, html {
   background-color: white;
   margin-right: 0.625rem; }
 
-.nav__item_activ::before {
+.active::before {
   background-color: #0e2088; }
 
-.nav__item_activ .nav-text {
+.active .nav-text {
   display: inline; }
 
-.nav__item_activ .nav__link {
+.active .nav__link {
   color: white;
   margin-left: -3.125rem; }
 
@@ -177,7 +174,7 @@ body, html {
   height: 90%;
   margin: 0 auto;
   position: relative;
-  top: 8.625rem; }
+  top: 6.25rem; }
   @media screen and (max-width: 768px) {
     .home__content {
       top: 12.5rem;
@@ -259,6 +256,9 @@ body, html {
   @media screen and (max-width: 768px) {
     .home-navigate {
       display: none; } }
+  @media screen and (max-width: 992px) {
+    .home-navigate {
+      margin-top: -2.8125rem; } }
 
 .home-navigate__list {
   display: -webkit-box;
@@ -279,6 +279,8 @@ body, html {
     margin-right: 0; }
   .home-navigate__item b {
     font-size: 1.125rem; }
+  .home-navigate__item p {
+    margin: 0; }
   .home-navigate__item:hover {
     color: white; }
 
@@ -440,7 +442,7 @@ body, html {
   height: 90%;
   margin: 0 auto;
   position: relative;
-  top: 138px; }
+  top: 5rem; }
   @media screen and (max-width: 768px) {
     .about__content {
       top: 200px;
@@ -467,7 +469,7 @@ body, html {
 
 .svg-circle {
   position: absolute;
-  top: 22%;
+  top: 46%;
   left: 73%; }
 
 .svg-polygon {
@@ -550,14 +552,13 @@ body, html {
   color: #fff;
   font-size: 0.875rem;
   font-weight: 700;
-  letter-spacing: -0.0625rem;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
 
 .map {
   width: 100%;
-  height: 46.875rem;
+  height: 100%;
   position: relative;
   background-repeat: no-repeat;
   background-position: center;
@@ -565,7 +566,7 @@ body, html {
 
 .contact__block {
   position: absolute;
-  top: 45%;
+  top: 50%;
   left: 59%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
