--- a/scss/layout/layout.scss
+++ b/scss/layout/layout.scss
@@ -1,20 +1,22 @@
 .wrapper{
     overflow: hidden;
     width: 100%;
-    min-height: 100%;
-    background-color: #0c0c0c
+    height: 100%;
+    background-color: #0c0c0c;
 }
 .container{
     //width: 1170px;
     width: 87%;
     margin: 0 auto;
+    height: 100%;
+    position: relative;
+    top: 0%;
+    transition: top 1s;
 }
 .section{
     position: relative;
     width: 100%;
     height: 100%;
-    min-height: 720px;
-    border-bottom: 1px dashed #fff;
 }
 
 $laptop: 992px;
