--- a/scss/layout/section/contact.scss
+++ b/scss/layout/section/contact.scss
@@ -1,6 +1,6 @@
 .map{
     width: 100%;
-    height: rem(750px);
+    height: 100%;
     position: relative;
     background-repeat: no-repeat;
     background-position: center;
@@ -8,7 +8,7 @@
 }
 .contact__block{
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 59%;
     transform: translateY(-50%);
     width: rem(300px);
