--- a/scss/layout/section/home.scss
+++ b/scss/layout/section/home.scss
@@ -3,7 +3,7 @@
     height: 90%;
     margin: 0 auto;
     position: relative;
-    top: rem(138px);
+    top: rem(100px);
     @include tablets{
         top: rem(200px);
         margin: 0 0;
@@ -82,6 +82,9 @@
     @include tablets{
         display: none;
     }
+    @include laptop{
+        margin-top: rem(-45px);
+    }
 }
 .home-navigate__list{
     display: flex;
@@ -99,6 +102,9 @@
     }
     b{
         font-size: rem(18px);
+    }
+    p{
+        margin: 0;
     }
     &:hover{
         color: rgba(255, 255, 255, 1);
